--- a/bayi/src/app/pages/islemler/satisEkle/satisEkle.html
+++ b/bayi/src/app/pages/islemler/satisEkle/satisEkle.html
@@ -56,7 +56,7 @@
                 </a>
                 </div>
             </div>
-            <div class="container" style="overflow-y: auto; height: calc(100vh - 263px) !important;">
+            <div class="container" style="overflow-y: auto; height: calc(100vh - 256px) !important;">
                 <div class="row m-0" *ngIf="!urunListesi && !urunLoader">
                     <div class="alert alert-primary col-12 mt-2 p-4">
                         <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
@@ -78,11 +78,16 @@
                                         <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="80px" width="80px" style="float: left;">
                                     </div>
                                     <div class="col-10">
-                                        <div>
-                                            <strong>{{urun.e_stok_kart_kodu}} : {{urun.e_stok_kart_adi}}</strong>
+                                        <div class="col-12" style="float: right;">
+                                            <strong>{{urun.e_stok_kart_kodu}}</strong>
                                         </div>
-                                        <div class="container mt-3" style="text-align: right;">
-                                            <strong>{{urun.e_fiyat | currency : ' '}} ₺</strong>
+                                        <div class="col-12 mt-2" style="float: right; width: 300px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                                            <a>{{urun.e_stok_kart_adi}}</a>
+                                        </div>
+                                        <div class="col-12">
+                                            <div class="container mt-2" style="float: right;">
+                                                <strong class="fs-20">{{urun.e_fiyat | currency : ' '}} ₺</strong>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -99,7 +104,7 @@
                         <span class="fas fa-solid fa-cart-plus mr-1 mt-2 fs-16" style="color: #cdab60;"><a style="color: black; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"> SEPETİM</a></span>
                     </div>
                 </div>
-                <div class="card-body bg-transparent" style="height: calc(100vh - 348px) !important; overflow-y: auto;">
+                <div class="card-body bg-transparent" style="height: calc(100vh - 369px) !important; overflow-y: auto;">
                     <div class="row m-0" *ngIf="!satisDetayListesi && !detayLoader">
                         <div class="alert alert-primary col-12 m-3 p-4" style="text-align: center; font-size: large;">
                             <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
@@ -120,19 +125,30 @@
                                         <div class="col-1" style="float: left;">
                                             <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{detay.e_resim_uniq_id}}.{{detay.e_resim_dosya_uzantisi}}" width="70px" height="70px">
                                         </div>
-                                        <div class="col-5" style="text-align: center;">
-                                            <strong style="font-size: 12px;">{{detay.e_stok_kart_kodu}} : {{detay.e_stok_kart_adi}}</strong>
+                                        <div class="col-11" style="margin-top: 15px;">
+                                            <div class="row m-0">
+                                                <div class="col-6" style="text-align: center;">
+                                                    <div class="row m-0">
+                                                        <div class="col-12">
+                                                            <strong style="font-size: 12px;">{{detay.e_stok_kart_kodu}}</strong>
+                                                        </div>
+                                                        <div class="col-12" style="width: 300px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                                                            <a>{{detay.e_stok_kart_adi}}</a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="col-3">
+                                                    <button type="button" class="btn btn-primary btn-sm mr-2" *ngIf="detay.e_miktar != 1" (click)="detayMiktarDuzenle(detay, -1)"><i class="fas fa-solid fa-minus"></i></button>
+                                                    <button disabled type="button" class="btn btn-primary btn-sm  mr-2" *ngIf="detay.e_miktar == 1"><i class="fas fa-solid fa-minus"></i></button>
+                                                    <strong>{{detay.e_miktar}}</strong>
+                                                    <button type="button" class="btn btn-primary btn-sm ml-2" (click)="detayMiktarDuzenle(detay, 1)"><i class="fas fa-solid fa-plus"></i></button>
+                
+                                                </div>
+                                                <div class="col-2"><strong class="fs-13">{{detay.e_satir_toplami | currency: ' '}} ₺</strong></div>
+                                                <div class="col-1" *ngIf="!silinenKayitBtn[detay.e_id]" style="float: right;"><button type="button" class="btn btn-dark btn-sm" (click)="satisDetaySil(detay, 'satisIslemleri/satisDetaySil');"><i class="fas fa-times fs-16"></i></button></div>
+                                                <div class="col-1" *ngIf="silinenKayitBtn[detay.e_id]" style="float: right;"><button type="button" class="btn btn-dark btn-sm"><i class="fas fa-times fs-16"></i></button></div>
+                                            </div>
                                         </div>
-                                        <div class="col-3">
-                                            <button type="button" class="btn btn-primary mr-2" *ngIf="detay.e_miktar != 1" (click)="detayMiktarDuzenle(detay, -1)"><i class="fas fa-solid fa-minus"></i></button>
-                                            <button disabled type="button" class="btn btn-primary mr-2" *ngIf="detay.e_miktar == 1"><i class="fas fa-solid fa-minus"></i></button>
-                                            <strong>{{detay.e_miktar}}</strong>
-                                            <button type="button" class="btn btn-primary ml-2" (click)="detayMiktarDuzenle(detay, 1)"><i class="fas fa-solid fa-plus"></i></button>
-        
-                                        </div>
-                                        <div class="col-2"><strong>{{detay.e_satir_toplami | currency: ' '}} ₺</strong></div>
-                                        <div class="col-1" *ngIf="!silinenKayitBtn[detay.e_id]" style="float: right;"><button type="button" class="btn btn-dark btn-block" (click)="satisDetaySil(detay, 'satisIslemleri/satisDetaySil');"><i class="fas fa-times fs-16"></i></button></div>
-                                        <div class="col-1" *ngIf="silinenKayitBtn[detay.e_id]" style="float: right;"><button type="button" class="btn btn-dark btn-block"><i class="fas fa-times fs-16"></i></button></div>
                                     </div>
                                 </div>
                             </div>
