--- a/bayi/src/app/pages/islemler/siparisIslemleri/siparisIslemleri.html
+++ b/bayi/src/app/pages/islemler/siparisIslemleri/siparisIslemleri.html
@@ -246,7 +246,7 @@
               <th class="text-center w-10">Toplam</th>
               <th class="text-center w-10">Durum</th>
               <th class="text-center w-20">
-                <button class="btn btn-primary btn-sm btn-block" (click)="siparisEkleButton()"><i class="fas fa-plus mr-1"></i> Yeni Sipariş Ekle</button>
+                <a href="http://localhost:5772/islemler/siparisEkle"><button class="btn btn-primary btn-sm btn-block"><i class="fas fa-plus mr-1"></i> Yeni Sipariş Ekle</button></a>
               </th>
             </tr>
           </thead>
