--- a/bayi/src/app/pages/islemler/siparisEkle/siparisEkle.html
+++ b/bayi/src/app/pages/islemler/siparisEkle/siparisEkle.html
@@ -74,15 +74,15 @@
                         <div class="card">
                             <div class="card-body" style="text-align: right; box-shadow: 3px 3px 3px gray">
                                 <div class="row m-0">
-                                    <div class="col-2">
-                                        <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="80px" width="80px" style="float: left;">
+                                    <div class="col-1">
+                                        <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="70px" width="70px" style="float: left;">
                                     </div>
-                                    <div class="col-10" style="margin-top: 21px;">
+                                    <div class="col-11" style="margin-top: 21px;">
                                         <div class="row m-0">
-                                            <div class="col-12">
+                                            <div class="col-12" style="align-items: left;">
                                                 <strong>{{urun.e_stok_kart_kodu}}</strong>
                                             </div>
-                                            <div class="col-12 mt-1" style="width: 300px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                                            <div class="col-12 mt-1" style="width: 5px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; align-items: left;">
                                                 <strong>{{urun.e_stok_kart_adi}}</strong>
                                             </div>
                                         </div>
