--- a/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
+++ b/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
@@ -268,7 +268,7 @@
 <div class="alert alert-primary p-4" *ngIf="!satisListesi && !mainLoader">
   <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
   <span class=" valign-middle">Listelemek istediğiniz kayıt bulunamadı.</span>
-  <a href="http://localhost:5772/islemler/satisEkle"><button class="btn btn-primary fa-pull-right w-25" (click)="satisEkleButton()"><span class="fas fa-plus mr-2"></span> Yeni Satış Ekle</button></a>
+  <button class="btn btn-primary fa-pull-right w-25" (click)="satisEkleButton()"><span class="fas fa-plus mr-2"></span> Yeni Satış Ekle</button>
 </div> 
   
 <div class="alert alert-primary p-4" *ngIf="mainLoader">
