--- a/bayi/src/app/pages/islemler/siparisEkle/siparisEkle.html
+++ b/bayi/src/app/pages/islemler/siparisEkle/siparisEkle.html
@@ -21,7 +21,7 @@
                             </div>
                         </div>
                     </div>
-                </a>
+                    </a>
                 </div>
                 <div class="col-4">
                     <a style="cursor: pointer;" class="card mb-4"
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                     </div>
-                </a>
+                    </a>
                 </div>
                 <div class="col-4">
                     <a style="cursor: pointer;" class="card mb-4"
@@ -72,19 +72,17 @@
                 <div class="row m-0" *ngIf="urunListesi && !urunLoader">
                     <div class="col-6 mt-2 mb-1" *ngFor="let urun of urunListesi" (click)="sepeteEkle(urun)">
                         <div class="card">
-                            <div class="card-body" style="text-align: right; box-shadow: 3px 3px 3px gray">
+                            <div class="card-body" style="text-align: right; box-shadow: 3px 3px 3px gray; padding: 5px !important;">
                                 <div class="row m-0">
-                                    <div class="col-1">
-                                        <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="70px" width="70px" style="float: left;">
+                                    <div class="col-2" style="padding-left: 0px !important; padding-right: 0px !important;">
+                                        <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="70px" width="70px" style="float: left !important;">
                                     </div>
-                                    <div class="col-11" style="margin-top: 21px;">
-                                        <div class="row m-0">
-                                            <div class="col-12" style="align-items: left;">
-                                                <strong>{{urun.e_stok_kart_kodu}}</strong>
-                                            </div>
-                                            <div class="col-12 mt-1" style="width: 5px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; align-items: left;">
-                                                <strong>{{urun.e_stok_kart_adi}}</strong>
-                                            </div>
+                                    <div class="col-10" style="text-align: left;">
+                                        <div class="col-12">
+                                            <strong>{{urun.e_stok_kart_kodu}}</strong>
+                                        </div>
+                                        <div class="col-12 mt-2" style="width: 300px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                                            <a>{{urun.e_stok_kart_adi}}</a>
                                         </div>
                                     </div>
                                 </div>
@@ -101,7 +99,7 @@
                         <span class="fas fa-solid fa-cart-plus mr-1 mt-2 fs-16" style="color: #cdab60;"><a style="color: black; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"> SEPETİM</a></span>
                     </div>
                 </div>
-                <div class="card-body bg-transparent" style="height: calc(100vh - 270px) !important; overflow-y: auto;">
+                <div class="card-body bg-transparent" style="height: calc(100vh - 369px) !important; overflow-y: auto;">
                     <div class="row m-0" *ngIf="!siparisDetayListesi && !detayLoader">
                         <div class="alert alert-primary col-12 m-3 p-4" style="text-align: center; font-size: large;">
                             <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
@@ -117,32 +115,28 @@
                     <div class="row m-0" *ngIf="siparisDetayListesi && !detayLoader" style="overflow-y: auto;">
                         <div class="col-12 mt-2 mb-1" *ngFor="let detay of siparisDetayListesi">
                             <div class="card" style="box-shadow: 3px 3px 3px gray">
-                                <div class="card-body">
+                                <div class="card-body" style="padding: 5px !important;">
                                     <div class="row m-0">
-                                        <div class="col-2">
-                                            <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/A30213F1-2C98-4F0D-B4F2-A7F5BCE548C7.jpg" height="80px" width="80px" style="float: left;">
+                                        <div class="col-2"></div>
+                                        <div class="col-10" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
+                                            <strong>{{detay.e_stok_kart_adi}}</strong>
                                         </div>
-                                        <div class="col-10" style="margin-top: 21px;">
+                                        <div class="col-2" style= "padding-left: 0px !important;">
+                                            <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{detay.e_resim_uniq_id}}.{{detay.e_resim_dosya_uzantisi}}" width="80px" height="60px">
+                                        </div>
+                                        <div class="col-10" style="margin-top: 15px; padding: 0 !important;">
                                             <div class="row m-0">
-                                                <div class="col-8" style="text-align: left;">
-                                                    <div class="row m-0">
-                                                        <div class="col-12">
-                                                            <strong>{{detay.e_stok_kart_kodu}}</strong>
-                                                        </div>
-                                                        <div class="col-12" style="width: 300px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">
-                                                            <a>{{detay.e_stok_kart_adi}}</a>
-                                                        </div>
-                                                    </div>
+                                                <div class="col-2" style="text-align: center;">
+                                                    <strong style="font-size: 12px;">{{detay.e_stok_kart_kodu}}</strong>
                                                 </div>
-                                                <div class="col-3">
+                                                <div class="col-8" style="align-items: center; text-align:center">
                                                     <button type="button" class="btn btn-primary btn-sm mr-2" *ngIf="detay.e_miktar != 1" (click)="detayMiktarDuzenle(detay, -1)"><i class="fas fa-solid fa-minus"></i></button>
-                                                    <button disabled type="button" class="btn btn-primary btn-sm mr-2" *ngIf="detay.e_miktar == 1"><i class="fas fa-solid fa-minus"></i></button>
+                                                    <button disabled type="button" class="btn btn-primary btn-sm  mr-2" *ngIf="detay.e_miktar == 1"><i class="fas fa-solid fa-minus"></i></button>
                                                     <strong>{{detay.e_miktar}}</strong>
                                                     <button type="button" class="btn btn-primary btn-sm ml-2" (click)="detayMiktarDuzenle(detay, 1)"><i class="fas fa-solid fa-plus"></i></button>
-                
                                                 </div>
-                                                <div class="col-1" *ngIf="!silinenKayitBtn[detay.e_id]"><button type="button" class="btn btn-dark btn-sm" (click)="detaySilButton(detay, 'siparisIslemleri/siparisDetaySil');"><i class="fas fa-times fs-16"></i></button></div>
-                                                <div class="col-1" *ngIf="silinenKayitBtn[detay.e_id]"><button type="button" class="btn btn-dark btn-sm"><i class="fas fa-times fs-16"></i></button></div>
+                                                <div class="col-2" *ngIf="!silinenKayitBtn[detay.e_id]" style="align-items: right;"><button type="button" class="btn btn-dark btn-sm" (click)="siparisDetaySil(detay, 'siparisIslemleri/siparisDetaySil');"><i class="fas fa-times fs-16"></i></button></div>
+                                                <div class="col-2" *ngIf="silinenKayitBtn[detay.e_id]" style="align-items: right;"><button type="button" class="btn btn-dark btn-sm"><div class="spinner-glow spinner-glow-light mt-0"></div></button></div>
                                             </div>
                                         </div>
                                     </div>
@@ -160,7 +154,7 @@
                                 <div class="card-body">
                                     <div class="d-flex">
                                         <div class="w-100">
-                                        <b class="text-truncate fs-14 mb-2">Yeni Sayfa</b>
+                                        <b class="text-truncate fs-12 mb-2">Yeni Sayfa</b>
                                         </div>
                                         <div class="text-warning ms-auto">
                                         <i class="fas fa-sync"></i>
@@ -176,7 +170,7 @@
                                 <div class="card-body">
                                     <div class="d-flex">
                                         <div class="w-100">
-                                        <b class="text-truncate fs-14 mb-2">Sepeti Temizle</b>
+                                        <b class="text-truncate fs-12 mb-2">Sepet Temizle</b>
                                         </div>
                                         <div class="text-dark ms-auto">
                                         <i class="fas fa-solid fa-trash"></i>
@@ -192,12 +186,12 @@
                                 <div class="card-body">
                                     <div class="d-flex">
                                         <div class="w-100">
-                                        <b class="text-truncate fs-14 mb-2">Kaydet</b>
+                                        <b class="text-truncate fs-12 mb-2">Kaydet</b>
                                         </div>
                                         <div class="text-success ms-auto">
-                                        <i class="fas fa-solid fa-check"></i>
+                                            <i class="fas fa-solid fa-check"></i>
                                         </div>
-                                </div>
+                                    </div>
                                 </div>
                             </a>
                         </div>
