--- a/bayi/src/app/pages/islemler/satisEkle/satisEkle.html
+++ b/bayi/src/app/pages/islemler/satisEkle/satisEkle.html
@@ -104,7 +104,7 @@
                         <span class="fas fa-solid fa-cart-plus mr-1 mt-2 fs-16" style="color: #cdab60;"><a style="color: black; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"> SEPETİM</a></span>
                     </div>
                 </div>
-                <div class="card-body bg-transparent" style="height: calc(100vh - 369px) !important; overflow-y: auto;">
+                <div class="card-body bg-transparent" style="height: calc(100vh - 346px) !important; overflow-y: auto;">
                     <div class="row m-0" *ngIf="!satisDetayListesi && !detayLoader">
                         <div class="alert alert-primary col-12 m-3 p-4" style="text-align: center; font-size: large;">
                             <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
@@ -151,7 +151,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-footer mt-2" style="border-radius: 5px; position: flex;">
+                <div class="card-footer mt-2" style="border-radius: 5px; padding: 2px;">
                     <div class="row m-0">
                         <div class="col-12 p-1" style="text-align: right;">
                             <strong> SEPET TOPLAMI : {{sepetToplami | currency : ' '}} ₺</strong>
