--- a/bayi/src/app/pages/islemler/siparisEkle/siparisEkle.html
+++ b/bayi/src/app/pages/islemler/siparisEkle/siparisEkle.html
@@ -99,7 +99,7 @@
                         <span class="fas fa-solid fa-cart-plus mr-1 mt-2 fs-16" style="color: #cdab60;"><a style="color: black; font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"> SEPETİM</a></span>
                     </div>
                 </div>
-                <div class="card-body bg-transparent" style="height: calc(100vh - 369px) !important; overflow-y: auto;">
+                <div class="card-body bg-transparent" style="height: calc(100vh - 256px) !important; overflow-y: auto;">
                     <div class="row m-0" *ngIf="!siparisDetayListesi && !detayLoader">
                         <div class="alert alert-primary col-12 m-3 p-4" style="text-align: center; font-size: large;">
                             <i class="ri-forbid-line fs-22 mr-3 valign-middle"></i>
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-footer mt-2" style="border-radius: 5px; position: flex;">
+                <div class="card-footer mt-2" style="border-radius: 5px; padding-bottom: 0px;">
                     <div class="row m-0">
                         <div class="col-4">
                             <a style="cursor: pointer;" class="card mb-4"
