--- a/bayi/src/app/pages/islemler/siparisEkle/siparisEkle.html
+++ b/bayi/src/app/pages/islemler/siparisEkle/siparisEkle.html
@@ -186,7 +186,7 @@
                                 <div class="card-body">
                                     <div class="d-flex">
                                         <div class="w-100">
-                                        <b class="text-truncate fs-12 mb-2">Kaydet</b>
+                                        <b class="text-truncate fs-12 mb-2">Siparişi Kaydet</b>
                                         </div>
                                         <div class="text-success ms-auto">
                                             <i class="fas fa-solid fa-check"></i>
