--- a/bayi/src/app/oturum/giris/giris.html
+++ b/bayi/src/app/oturum/giris/giris.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0">
   <div class="row no-gutters">
     <div class="col-lg-4">
-      <div class="authentication-page-content p-4 d-flex align-items-center min-vh-100">
+      <div class="authentication-page-content p-4 d-flex align-items-center min-vh-100" style="background-color: rgb(44, 44, 44);">
         <div class="w-100">
           <div class="row justify-content-center">
             <div class="col-lg-9">
@@ -27,7 +27,7 @@
                   </div>
                   <div class="custom-control custom-checkbox">
                     <input type="checkbox" id="e_beni_hatirla" class="custom-control-input" formControlName="e_beni_hatirla">
-                    <label class="custom-control-label" for="e_beni_hatirla">Beni Hatırla</label>
+                    <label class="custom-control-label" style="color: white;" for="e_beni_hatirla">Beni Hatırla</label>
                   </div>
                   <div class="mt-4 text-center">
                     <button class="btn btn-primary btn-block" *ngIf="!girisYapBtn"><i class="fas fa-sign-in-alt mr-2"></i> Giriş Yap</button>
