--- a/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
+++ b/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
@@ -288,7 +288,7 @@
               <th class="text-center w-20">Ürünler</th>
               <th class="text-center w-20">Toplam</th>
               <th class="text-center w-20">
-                <a href="http://localhost:5772/islemler/satisEkle"><button class="btn btn-primary btn-sm btn-block">Yeni Satış Ekle <i class="fas fa-plus ml-1"></i></button></a>
+                <button class="btn btn-primary btn-sm btn-block" (click)="satisEkleButton()">Yeni Satış Ekle <i class="fas fa-plus ml-1"></i></button>
               </th>
             </tr>
           </thead>
