--- a/bayi/src/app/pages/kayitlar/kullaniciKayitlari/kullaniciKayitlari.html
+++ b/bayi/src/app/pages/kayitlar/kullaniciKayitlari/kullaniciKayitlari.html
@@ -6,7 +6,7 @@
       <form validControl [formGroup]="kullaniciTanimlariFormu" (submit)="islemiKaydet()">
         <div class="row m-0">
           <div class="col-md-12 form-group">
-            <label>Kullanıcı Adı</label>
+            <label>Kullanıcı Adı *</label>
             <input type="text" class="form-control" formControlName="e_kull_adi" title="Kullanıcı Adı" required>
           </div>
           <div class="col-md-12 form-group">
