--- a/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
+++ b/bayi/src/app/pages/islemler/satisIslemleri/satisIslemleri.html
@@ -86,7 +86,7 @@
                         <tbody>
                         <tr *ngFor="let detay of satisDetayListesi">
                             <td class="text-center">
-                              <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{detay.e_resim_uniq_id}}.{{detay.e_resim_dosya_uzantisi}}" width="70px" height="70px">
+                              <img src="{{MAIN_URL}}/admin/uploads/stokKartIslemleri/{{detay.e_resim_uniq_id}}.{{detay.e_resim_dosya_uzantisi}}" width="70px" height="70px">
                             </td>
                             <td class="text-center">{{detay.e_stok_kart_kodu}}</td>
                             <td class="text-center">{{detay.e_stok_kart_adi}}</td>
@@ -223,7 +223,7 @@
             <tbody>
               <tr *ngFor="let urun of urunListesi" (click)="urunSec(urun)">
                 <td class="text-center">
-                  <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="80px" width="80px">
+                  <img src="{{MAIN_URL}}/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="80px" width="80px">
                 </td>
                 <td class="text-left">{{urun.e_stok_kart_kodu}}</td>
                 <td class="text-left">{{urun.e_stok_kart_adi}}</td>
