--- a/bayi/src/app/pages/islemler/siparisEkle/siparisEkle.html
+++ b/bayi/src/app/pages/islemler/siparisEkle/siparisEkle.html
@@ -75,7 +75,7 @@
                             <div class="card-body" style="text-align: right; box-shadow: 3px 3px 3px gray; padding: 5px !important;">
                                 <div class="row m-0">
                                     <div class="col-2" style="padding-left: 0px !important; padding-right: 0px !important;">
-                                        <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="70px" width="70px" style="float: left !important;">
+                                        <img src="{{MAIN_URL}}/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="70px" width="70px" style="float: left !important;">
                                     </div>
                                     <div class="col-10" style="text-align: left;">
                                         <div class="col-12">
@@ -122,7 +122,7 @@
                                             <strong>{{detay.e_stok_kart_adi}}</strong>
                                         </div>
                                         <div class="col-2" style= "padding-left: 0px !important;">
-                                            <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{detay.e_resim_uniq_id}}.{{detay.e_resim_dosya_uzantisi}}" width="80px" height="60px">
+                                            <img src="{{MAIN_URL}}/admin/uploads/stokKartIslemleri/{{detay.e_resim_uniq_id}}.{{detay.e_resim_dosya_uzantisi}}" width="80px" height="60px">
                                         </div>
                                         <div class="col-10" style="margin-top: 15px; padding: 0 !important;">
                                             <div class="row m-0">
