--- a/bayi/src/app/pages/islemler/siparisIslemleri/siparisIslemleri.html
+++ b/bayi/src/app/pages/islemler/siparisIslemleri/siparisIslemleri.html
@@ -173,7 +173,7 @@
             <tbody>
               <tr *ngFor="let urun of urunListesi" (click)="urunSec(urun)">
                 <td class="text-left">
-                  <img src="https://test.eronsoftware.com:5770/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="80px" width="80px">
+                  <img src="{{MAIN_URL}}/admin/uploads/stokKartIslemleri/{{urun.e_resim_uniq_id}}.{{urun.e_resim_dosya_uzantisi}}" height="80px" width="80px">
                 </td>
                 <td class="text-left">{{urun.e_stok_kart_kodu}}</td>
                 <td class="text-left">{{urun.e_stok_kart_adi}}</td>
